# HarmonyRestorer

./: .gitignore  .replit  Pasted-Sure-understanding-the-specific-error-message-or-the-nature-of-the-failure-in-the-pitch-correction--1729477135095.txt  Pasted-The-error-message-No-module-named-torchaudio-usually-means-that-the-torchaudio-library-is-either-n-1728230476100.txt  Pasted-The-error-you-re-encountering-is-related-to-incompatible-versions-of-numpy-and-possibly-other-packag-1728232771584.txt  Pasted-The-error-you-re-encountering-module-numpy-has-no-attribute-complex-is-due-to-changes-in-numpy-1728261860333.txt  Pasted-The-spectral-gating-function-you-provided-appears-to-have-issues-that-prevent-it-from-effectively-re-1729464300919.txt  Pasted-To-ensure-Python-3-9-is-set-as-the-default-version-and-install-the-required-packages-correctly-foll-1728258974331.txt  Pasted-To-resolve-the-Python-version-compatibility-issue-and-package-installation-errors-especially-relate-1728234193441.txt  Pasted-To-resolve-the-Python-version-conflicts-and-ensure-Python-3-9-is-set-as-the-active-version-while-ins-1728259719990.txt  Pasted-To-resolve-the-dependency-conflicts-particularly-with-torch-and-numpy-and-ensure-compatibility-wit-1728260814477.txt  Pasted-o-resolve-the-PyTorch-and-CUDA-library-issues-in-the-Replit-environment-by-ensuring-that-you-are-usi-1728231375691.txt  README.md  app.py  audio_processor.py  initialize_db.py  main.py  models.py  pyproject.toml  replit.nix  requirements.txt  test_audio_processor.py  test_batch_processing.py  test_packages.py
.config/pulse/: cookie
instance/: harmonyrestorer.db
static/css/: styles.css
static/js/: main.js
templates/: base.html  history.html  index.html  login.html  register.html
test_files/templates/: base.html
