[tool.poetry]
name = "harmonyrestorer"
version = "0.1.0"
description = "Audio Restoration App"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
flask = "2.0.1"
werkzeug = "2.0.1"
numpy = "1.24.3"
scipy = "1.10.1"
librosa = "0.10.0"
soundfile = "0.12.1"
gunicorn = "20.1.0"
flask-caching = "1.10.1"
pydub = "0.25.1"
pyrubberband = "0.3.0"
torch = "1.13.1"
torchaudio = "0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
