[tool.poetry]
name = "harmonyrestorer"
version = "0.1.0"
description = "Audio Restoration App"
authors = ["Jacob J. Choi <jacob77choi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
flask = "2.2.5"
werkzeug = "2.2.3"
flask-sqlalchemy = "3.0.3"
flask-login = "0.6.2"
soundfile = "0.12.1"
numpy = "1.24.3"
pyrubberband = "0.3.0"
pydub = "0.25.1"
librosa = "0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
