[tool.poetry]
name = "harmonyrestorer"
version = "0.1.0"
description = "Audio Restoration App"
authors = ["Jacob J. Choi <jacob77choi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flask = "2.2.5"
werkzeug = "2.2.3"
flask-sqlalchemy = "3.0.3"
flask-login = "0.6.2"
soundfile = "0.12.1"
numpy = "1.24.3"
pydub = "0.25.1"
torchaudio = "2.0.0"
torch = "2.0.0"
flask-migrate = "4.0.7"
matplotlib = "3.7.1"
flask-caching = "^2.3.0"
gunicorn = "^23.0.0"
scipy = "^1.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"